test/TestPhases/parser/invalid/docendswitheof.blc

@[EntryPoint]
activity main()
    await true
end

 /** 
        doc ends with eof